--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
     "dependencies": {
         "axios": "^0.21.1",
         "classnames": "^2.3.1",
+        "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-scripts": "4.0.3"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
+        "start": "react-app-rewired start",
+        "build": "react-app-rewired build",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -32,5 +32,9 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "react-app-rewire-alias": "^1.0.3",
+        "react-app-rewired": "^2.1.8"
     }
 }
